# autotagger

./: .gitignore  Dockerfile  README.md  app.py  autotag  gunicorn.conf.py  pyproject.toml
.github/workflows/: docker-build.yml
autotagger/: __init__.py  autotagger.py
data/: tags.json
templates/: error.html  evaluate.html  index.html
